[package]
name = "rmrk_extension"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "~4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "rmrk_extension"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
	"ink/std",
	"scale/std",
	"scale-info/std",
]
ink-as-dependency = []
